fix: 회원 탈퇴한 사용자의 댓글이 함께 삭제되지 않는 문제 해결