@@ -1,11 +1,13 @@
 package com.est.cranejob.post.dto.response;
 
+import com.est.cranejob.comment.domain.Comment;
 import com.est.cranejob.comment.dto.response.CommentResponse;
 import com.est.cranejob.post.domain.Post;
 import lombok.*;
 
 import java.io.Serializable;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 게시글의 상세 정보를 일반 사용자가 볼 수 있는 형태로 응답하는 DTO<br>
@@ -24,9 +26,11 @@ public class PostUserDetailResponse implements Serializable {
     private String nickname; // 게시글 작성자
     private String username; // 게시글 작성자 확인
 
-    public static PostUserDetailResponse toDTO(Post post){
-        List<CommentResponse> commentResponseList = post.getComments().stream().map(CommentResponse::toDTO)
-                .toList();
+    public static PostUserDetailResponse toDTO(Post post, List<Comment> comments){
+        List<CommentResponse> commentResponseList = comments.stream()
+                .filter(comment -> !comment.getIsDeleted()) // 수정된 부분
+                .map(CommentResponse::toDTO)
+                .collect(Collectors.toList());
         return PostUserDetailResponse.builder()
                 .id(post.getId())
                 .title(post.getTitle())
